--- a/views/documents/edit.erb
+++ b/views/documents/edit.erb
@@ -24,15 +24,28 @@
 	</section>
 	<div class="main">
 				<h1>What really happened?</h1>
-				<p>This entry, so far:</p><p><%= thisDoc["content"] %></p>
+				<p>This entry, so far:</p><p><%= thisDoc["title"] %></p><p>On <%= thisDoc["story_date"] %> this happened: <%= thisDoc["content"] %></p>
 		<form action="/documents/<%= thisDoc["id"] %>" method="POST">
 			<input type="hidden" name="_method" value="PUT">
 			<input type="text" name="title" placeholder="<%= thisDoc["title"] %>">
 			<input type="date" name="story_date" placeholder="<%= thisDoc["story_date"] %>">
-			<input id="contentform" type="test" name="content" placeholder="<%= thisDoc["content"] %>">
+			<input type="text" name="content" placeholder="markdown is enabled">
+			<select name="editor">
+				<% authors.each do |author| %>
+					<option value="<%= author["name"] %>"><%= author["name"] %></option>
+				<% end %>
+			</select>
 			<button>Change it!</button>
 		</form>
-
+	<div class="line"></div>
+		<h1>Older versions of this page:</h1>
+		<p><%= thisDoc["edit"] %>
+	<div class="line"></div>
+		<form action"/documents/edit/<%= thisDoc["id"] %>" method="post">
+			<input type="hidden" name="_method" value="DELETE">
+			<button>Delete this post</button>
+		</form>
+		
 	</div>
 
 				
