--- a/views/subscribers/subscriber.erb
+++ b/views/subscribers/subscriber.erb
@@ -36,7 +36,7 @@
 		<% end %>
 		<div class="line"></div>
 		<h1>Edit <%= thisSub["name"] %>'s info</h1>
-		<form action="/authors/<%= thisSub["id"] %>" method="POST">
+		<form action="/subscribers/<%= thisSub["id"] %>" method="POST">
 			<input type="hidden" name="_method" value="PUT" />
 			<input type="text" name="name" placeholder="<%= thisSub["name"] %>">
 			<input ="text" name="email" placeholder="<%= thisSub["email"] %>">
