--- a/views/documents/new.erb
+++ b/views/documents/new.erb
@@ -27,7 +27,7 @@
 		<form action="/documents" method="POST">
 			<input type="text" name="title" placeholder="Title">
 			<input type="date" name="story_date">
-			<input id="contentform" type="test" name="content" placeholder="Markdown is enabled">
+			<textarea id="contentform" type="test" name="content" placeholder="Markdown is enabled"></textarea>
 			<select name="author_id">
 				<% authors.each do |author| %>
 				<option value="<%= author.id %>"><%= author.name %></option>
