--- a/views/subscribers/index.erb
+++ b/views/subscribers/index.erb
@@ -26,8 +26,8 @@
 		<h1>Become a subscriber here</h1>
 		<div class="line"></div>
 		<form action="/subscribers" method="POST">
-			<input type="text" name="name" placeholder="Name, please">
-			<input type="text" name="email" placeholder="email">
+			<input type="text" name="name" placeholder="Name, please" required="required">
+			<input type="text" name="email" placeholder="email" required="required">
 			<input type="text" name="phone"
 			placeholder="phone number">
 			<button>Sign up!</button>
