--- a/views/documents/edit.erb
+++ b/views/documents/edit.erb
@@ -24,12 +24,12 @@
 	</section>
 	<div class="main">
 				<h1>What really happened?</h1>
-				<p>This entry, so far:</p><p><%= thisDoc["title"] %></p><p>On <%= thisDoc["story_date"] %> this happened: <%= thisDoc["content"] %></p>
+				<p>This entry, so far:</p><p><%= thisDoc["title"] %></p><p>On <%= thisDoc["story_date"] %> this happened: <%= thisDoc.content_html %></p>
 		<form action="/documents/<%= thisDoc["id"] %>" method="POST">
 			<input type="hidden" name="_method" value="PUT">
-			<input type="text" name="title" placeholder="<%= thisDoc["title"] %>">
-			<input type="date" name="story_date" placeholder="<%= thisDoc["story_date"] %>">
-			<textarea id="contentform" type="test" name="content" placeholder="Markdown is enabled"><%= thisDoc.content %></textarea>
+			<textarea type="text" name="title" placeholder="<%= thisDoc["title"] %>" required="required"><%= thisDoc.title %></textarea>
+			<input type="date" name="story_date" placeholder="<%= thisDoc["story_date"] %>" required="required">
+			<textarea id="contentform" type="text" name="content" placeholder="Markdown is enabled" required="required"><%= thisDoc.content %></textarea>
 			<select name="editor">
 				<% authors.each do |author| %>
 					<option value="<%= author["name"] %>"><%= author["name"] %></option>
@@ -39,7 +39,13 @@
 		</form>
 	<div class="line"></div>
 		<h1>Older versions of this page:</h1>
-		<p><%= thisDoc["edit"] %>
+		<% if edits == nil %>
+		<p>This document has not been edited yet.</p>
+		<% else %>
+		<% edits.each do |edit| %>
+		<p><%= edit.content_html %></p></br>
+		<% end %>
+		<% end %>
 	<div class="line"></div>
 		<form action"/documents/edit/<%= thisDoc["id"] %>" method="post">
 			<input type="hidden" name="_method" value="DELETE">
