--- a/views/documents/new.erb
+++ b/views/documents/new.erb
@@ -25,9 +25,9 @@
 	<div class="main">
 		<h1>What happens next?</h1>
 		<form action="/documents" method="POST">
-			<input type="text" name="title" placeholder="Title">
-			<input type="date" name="story_date">
-			<textarea id="contentform" type="test" name="content" placeholder="Markdown is enabled"></textarea>
+			<textarea type="text" name="title" placeholder="Title" required="required"></textarea>
+			<input type="date" name="story_date" required="required">
+			<textarea id="contentform" type="test" name="content" placeholder="Markdown is enabled" required="required"></textarea>
 			<select name="author_id">
 				<% authors.each do |author| %>
 				<option value="<%= author.id %>"><%= author.name %></option>
