--- a/views/documents/edit.erb
+++ b/views/documents/edit.erb
@@ -1,35 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" type="text/css" href="/styles.css">
-	<meta charset="UTF-8">
-	<title>Air Force Deuce</title>
-</head>
-<body>
-	<header>
-		<h1><a href="/">Air Force Deuce Whiteboard</a></h1>
-	</header>
-	<section>
-		<form action="/search" method="GET">
-			<input type="text" name="search" placeholder="Search here!">
-			<button>Search</button>
-		</form>
-		<ul>
-			<li><a href="/documents/new">Create a new page</a></li>
-			<li><a href="/documents/<%= doc.first["id"] %>">Go to the first page</a></li>
-			<li><a href="/documents/<%= doc.last["id"] %>">See the most recent page</a></li>
-			<li><a href="/authors">Authors</a></li>
-			<li><a href="/subscribers">Subscribers</a></li>
-		</ul>
-	</section>
-	<div class="main">
-				<h1>What really happened?</h1>
-				<p>This entry, so far:</p><p><%= thisDoc["title"] %></p><p>On <%= thisDoc["story_date"] %> this happened: <%= thisDoc.content_html %></p>
+<h1>What really happened?</h1>
+	<p>This entry, so far:</p>
+	<p><%= thisDoc["title"] %></p>
+	<p>On <%= thisDoc["story_date"] %> this happened: <%= thisDoc.content_html %></p>
 		<form action="/documents/<%= thisDoc["id"] %>" method="POST">
 			<input type="hidden" name="_method" value="PUT">
 			<textarea type="text" name="title" placeholder="<%= thisDoc["title"] %>" required="required"><%= thisDoc.title %></textarea>
+		</br>
 			<input type="date" name="story_date" placeholder="<%= thisDoc["story_date"] %>" required="required">
+		</br>
 			<textarea id="contentform" type="text" name="content" placeholder="Markdown is enabled" required="required"><%= thisDoc.content %></textarea>
+		</br>
 			<select name="editor">
 				<% authors.each do |author| %>
 					<option value="<%= author["name"] %>"><%= author["name"] %></option>
@@ -37,24 +17,18 @@
 			</select>
 			<button>Change it!</button>
 		</form>
-	<div class="line"></div>
-		<h1>Older versions of this page:</h1>
-		<% if edits == nil %>
+<div class="line"></div>
+<h1>Older versions of this page:</h1>
+	<% if edits == nil %>
 		<p>This document has not been edited yet.</p>
-		<% else %>
+	<% else %>
 		<% edits.each do |edit| %>
-		<p><%= edit.content_html %></p></br>
+			<p><%= edit.content_html %></p>
+		</br>
 		<% end %>
-		<% end %>
-	<div class="line"></div>
-		<form action"/documents/edit/<%= thisDoc["id"] %>" method="post">
-			<input type="hidden" name="_method" value="DELETE">
-			<button>Delete this post</button>
-		</form>
-		
-	</div>
-
-				
-	
-</body>
-</html>
+	<% end %>
+<div class="line"></div>
+<form action"/documents/edit/<%= thisDoc["id"] %>" method="post">
+	<input type="hidden" name="_method" value="DELETE">
+	<button>Delete this post</button>
+</form>
