--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans|Crimson+Text:600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="/styles.css">
 	<meta charset="UTF-8">
 	<title><%= @title %></title>
