--- a/views/results.erb
+++ b/views/results.erb
@@ -1,12 +1,20 @@
-<h1>Search results for <%= search %>
+<h1>Search results for "<%= search %>"</h1>
 <div class="line"></div>
 <% if results.length < 0 %>
 	<p>No results matched your search</p>
-<% else %>
-	<ul>
-		<% results.each do |result| %>
-			<li><a href="/documents/<%= result["id"] %>"><%= result["title"] %></a>
-			</li>
-		<% end %>
-	</ul>
+<% end %>
+<% results.order("story_date ASC").each do |thisDoc| %>
+	<div id="snippets">
+		<h1><a href="/documents/<%= thisDoc["id"] %>">
+			<%= thisDoc["title"] %></a>
+		</h1>
+	<div class="line"></div>
+		<p>created by 
+			<% auth = Author.find_by(id: thisDoc["author_id"]) %>
+			<a href="/authors/<%= auth["id"] %>"><%= auth["name"] %></a> on <%= thisDoc["created_at"] %>
+		</p>
+	<div class="line"></div>
+		<h1>On <%= thisDoc["story_date"] %> these events unfolded:</h1>
+		<p><%= thisDoc.content_html %></p>
+	</div>	
 <% end %>
